@@ -12,7 +12,7 @@ defined('_JEXEC') or die;
 require_once __DIR__ . '/extension.php';
 
 /**
- * Installer Manage Model
+ * Installer Discover Model
  *
  * @package     Joomla.Administrator
  * @subpackage  com_installer
@@ -20,8 +20,6 @@ require_once __DIR__ . '/extension.php';
  */
 class InstallerModelDiscover extends InstallerModel
 {
-	protected $_context = 'com_installer.discover';
-
 	/**
 	 * Method to auto-populate the model state.
 	 *
@@ -32,15 +30,30 @@ class InstallerModelDiscover extends InstallerModel
 	 *
 	 * @return  void
 	 *
-	 * @since   1.6
+	 * @since   3.1
 	 */
 	protected function populateState($ordering = null, $direction = null)
 	{
 		$app = JFactory::getApplication();
+
+		// Load the filter state.
+		$search = $this->getUserStateFromRequest($this->context . '.filter.search', 'filter_search');
+		$this->setState('filter.search', $search);
+
+		$clientId = $this->getUserStateFromRequest($this->context . '.filter.client_id', 'filter_client_id', '');
+		$this->setState('filter.client_id', $clientId);
+
+		$categoryId = $this->getUserStateFromRequest($this->context . '.filter.type', 'filter_type', '');
+		$this->setState('filter.type', $categoryId);
+
+		$group = $this->getUserStateFromRequest($this->context . '.filter.group', 'filter_group', '');
+		$this->setState('filter.group', $group);
+
 		$this->setState('message', $app->getUserState('com_installer.message'));
 		$this->setState('extension_message', $app->getUserState('com_installer.extension_message'));
 		$app->setUserState('com_installer.message', '');
 		$app->setUserState('com_installer.extension_message', '');
+
 		parent::populateState('name', 'asc');
 	}
 
@@ -49,15 +62,42 @@ class InstallerModelDiscover extends InstallerModel
 	 *
 	 * @return  JDatabaseQuery  the database query
 	 *
-	 * @since   1.6
+	 * @since   3.1
 	 */
 	protected function getListQuery()
 	{
-		$db		= JFactory::getDbo();
-		$query = $db->getQuery(true)
+		$type   = $this->getState('filter.type');
+		$client = $this->getState('filter.client_id');
+		$group  = $this->getState('filter.group');
+
+		$query = JFactory::getDbo()->getQuery(true)
 			->select('*')
 			->from('#__extensions')
 			->where('state=-1');
+
+		if ($type)
+		{
+			$query->where('type=' . $this->_db->quote($type));
+		}
+
+		if ($client != '')
+		{
+			$query->where('client_id=' . (int) $client);
+		}
+
+		if ($group != '' && in_array($type, array('plugin', 'library', '')))
+		{
+			$query->where('folder=' . $this->_db->quote($group == '*' ? '' : $group));
+		}
+
+		// Filter by search in id
+		$search = $this->getState('filter.search');
+
+		if (!empty($search) && stripos($search, 'id:') === 0)
+		{
+			$query->where('extension_id = ' . (int) substr($search, 3));
+		}
+
 		return $query;
 	}
 
@@ -93,12 +133,14 @@ class InstallerModelDiscover extends InstallerModel
 			$key = implode(':', array($install->type, $install->element, $install->folder, $install->client_id));
 			$extensions[$key] = $install;
 		}
+
 		unset($installedtmp);
 
 		foreach ($results as $result)
 		{
 			// Check if we have a match on the element
 			$key = implode(':', array($result->type, $result->element, $result->folder, $result->client_id));
+
 			if (!array_key_exists($key, $extensions))
 			{
 				// Put it into the table
@@ -116,31 +158,36 @@ class InstallerModelDiscover extends InstallerModel
 	 */
 	public function discover_install()
 	{
-		$app = JFactory::getApplication();
+		$app       = JFactory::getApplication();
 		$installer = JInstaller::getInstance();
-		$eid = JRequest::getVar('cid', 0);
+		$eid       = JRequest::getVar('cid', 0);
+
 		if (is_array($eid) || $eid)
 		{
 			if (!is_array($eid))
 			{
 				$eid = array($eid);
 			}
+
 			JArrayHelper::toInteger($eid);
-			$app = JFactory::getApplication();
 			$failed = false;
+
 			foreach ($eid as $id)
 			{
 				$result = $installer->discover_install($id);
+
 				if (!$result)
 				{
 					$failed = true;
 					$app->enqueueMessage(JText::_('COM_INSTALLER_MSG_DISCOVER_INSTALLFAILED') . ': ' . $id);
 				}
 			}
+
 			$this->setState('action', 'remove');
 			$this->setState('name', $installer->get('name'));
 			$app->setUserState('com_installer.message', $installer->message);
 			$app->setUserState('com_installer.extension_message', $installer->get('extension_message'));
+
 			if (!$failed)
 			{
 				$app->enqueueMessage(JText::_('COM_INSTALLER_MSG_DISCOVER_INSTALLSUCCESSFUL'));
@@ -166,14 +213,17 @@ class InstallerModelDiscover extends InstallerModel
 			->delete('#__extensions')
 			->where('state = -1');
 		$db->setQuery($query);
+
 		if ($db->execute())
 		{
 			$this->_message = JText::_('COM_INSTALLER_MSG_DISCOVER_PURGEDDISCOVEREDEXTENSIONS');
+
 			return true;
 		}
 		else
 		{
 			$this->_message = JText::_('COM_INSTALLER_MSG_DISCOVER_FAILEDTOPURGEEXTENSIONS');
+
 			return false;
 		}
 	}
