@@ -10,7 +10,7 @@
 defined('_JEXEC') or die;
 
 JHtml::_('bootstrap.tooltip');
-JHtml::_('behavior.multiselect');
+JHtml::_('formbehavior.chosen', 'select');
 
 $listOrder	= $this->escape($this->state->get('list.ordering'));
 $listDirn	= $this->escape($this->state->get('list.direction'));
@@ -34,6 +34,22 @@ $listDirn	= $this->escape($this->state->get('list.direction'));
   	<?php if ($this->ftp) : ?>
   		<?php echo $this->loadTemplate('ftp'); ?>
   	<?php endif; ?>
+
+    <!-- Begin Filters -->
+    <div id="filter-bar" class="btn-toolbar">
+      <div class="btn-group pull-right hidden-phone">
+        <label for="limit" class="element-invisible"><?php echo JText::_('JFIELD_PLG_SEARCH_SEARCHLIMIT_DESC');?></label>
+        <?php echo $this->pagination->getLimitBox(); ?>
+      </div>
+      <div class="filter-search btn-group pull-left">
+        <input type="text" name="filter_search" id="filter_search" placeholder="<?php echo JText::_('JSEARCH_FILTER'); ?>" value="<?php echo $this->escape($this->state->get('filter.search')); ?>" class="hasTooltip" title="<?php echo JHtml::tooltipText('COM_INSTALLER_FILTER_LABEL'); ?>" />
+      </div>
+      <div class="btn-group pull-left">
+        <button type="submit" class="btn hasTooltip" title="<?php echo JHtml::tooltipText('JSEARCH_FILTER_SUBMIT'); ?>"><i class="icon-search"></i></button>
+        <button type="button" class="btn hasTooltip" title="<?php echo JHtml::tooltipText('JSEARCH_FILTER_CLEAR'); ?>" onclick="document.id('filter_search').value='';this.form.submit();"><i class="icon-remove"></i></button>
+      </div>
+    </div>
+    <div class="clearfix"> </div>
 
   	<!-- Begin Content -->
   		<?php if (count($this->items)) : ?>
